syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package routeguide;

message Pagination {
    int32 size = 1;
    int32 pageNum = 2;
}

message RouteRequest {
    string destination = 1;
    string email = 2;
    int32 userid = 3;
    string trip_home = 4;
    string uuid = 5;
    Pagination pagination = 6;
}

message RouteDetails {
    int32 routeid = 1;
    string location = 2;
    string traveler_email = 3;
    int32 stops = 4;
}

// Interface exported by the server.
service RouteGuide {
    rpc FindRoute(RouteRequest) returns (RouteDetails) {}
}